[gd_scene load_steps=19 format=3 uid="uid://dw0v6fspv3elk"]

[ext_resource type="Script" path="res://acerte_o_formato/scripts/fim.gd" id="1_6qn8d"]
[ext_resource type="Texture2D" uid="uid://dqww50vpj5wul" path="res://acerte_o_formato/assets/fundos_telas/tela_esccura.png" id="1_hirv0"]
[ext_resource type="Texture2D" uid="uid://etjfx243idv" path="res://acerte_o_formato/assets/fundos_telas/venceu.png" id="2_4b43x"]
[ext_resource type="FontFile" uid="uid://bu5633he0jbes" path="res://acerte_o_formato/assets/LilitaOne-Regular.ttf" id="3_f26re"]
[ext_resource type="AudioStream" uid="uid://mrphqt25xpp6" path="res://acerte_o_formato/assets/sounds/Video Game Jump Sound Effect 1.wav" id="5_3x3fd"]
[ext_resource type="Texture2D" uid="uid://dr8cj05s1nd8u" path="res://acerte_o_formato/assets/objetos/triangulo_azul.png" id="5_j7num"]
[ext_resource type="Texture2D" uid="uid://q08wgb2vucxh" path="res://acerte_o_formato/assets/botoes/x.png" id="6_eycrp"]
[ext_resource type="Texture2D" uid="uid://c644g6g6ewutt" path="res://acerte_o_formato/assets/botoes/but_restart.png" id="7_pg0n8"]
[ext_resource type="Texture2D" uid="uid://b103835kubv0x" path="res://acerte_o_formato/assets/botoes/Group 11.png" id="8_lv6w2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqows"]
texture = ExtResource("6_eycrp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8raga"]
texture = ExtResource("6_eycrp")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2nd0r"]
texture = ExtResource("6_eycrp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qs3ex"]
texture = ExtResource("7_pg0n8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r2fp6"]
texture = ExtResource("7_pg0n8")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_44ya6"]
texture = ExtResource("7_pg0n8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8thsd"]
texture = ExtResource("8_lv6w2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vcqxu"]
texture = ExtResource("8_lv6w2")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbjc8"]
texture = ExtResource("8_lv6w2")

[node name="fim" type="Node2D"]
script = ExtResource("1_6qn8d")

[node name="fundo" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_hirv0")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 672.0
offset_top = 224.0
offset_right = 1248.0
offset_bottom = 856.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_4b43x")

[node name="score" type="Label" parent="."]
z_index = 10
offset_left = 734.0
offset_top = 359.0
offset_right = 977.0
offset_bottom = 702.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.129412, 0.4, 0.752941, 1)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_f26re")
theme_override_font_sizes/font_size = 300
text = "5"
horizontal_alignment = 1

[node name="x" type="Label" parent="."]
z_index = 15
offset_left = 928.0
offset_top = 471.0
offset_right = 1171.0
offset_bottom = 758.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_colors/font_shadow_color = Color(0.129412, 0.4, 0.752941, 1)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_f26re")
theme_override_font_sizes/font_size = 175
text = "x"
horizontal_alignment = 1

[node name="objeto" type="Sprite2D" parent="."]
z_index = 13
position = Vector2(1176, 544)
texture = ExtResource("5_j7num")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3x3fd")

[node name="voltar_inicio" type="Button" parent="."]
z_index = 20
offset_left = 679.0
offset_top = 703.0
offset_right = 814.0
offset_bottom = 858.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_dqows")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8raga")
theme_override_styles/normal = SubResource("StyleBoxTexture_2nd0r")

[node name="recomecar" type="Button" parent="."]
z_index = 20
offset_left = 851.0
offset_top = 700.0
offset_right = 1065.0
offset_bottom = 918.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_qs3ex")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r2fp6")
theme_override_styles/normal = SubResource("StyleBoxTexture_44ya6")

[node name="recomecar2" type="Button" parent="."]
z_index = 20
offset_left = 1119.0
offset_top = 726.0
offset_right = 1233.0
offset_bottom = 840.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_8thsd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vcqxu")
theme_override_styles/normal = SubResource("StyleBoxTexture_dbjc8")

[connection signal="pressed" from="voltar_inicio" to="." method="_on_voltar_inicio_pressed"]
[connection signal="pressed" from="recomecar" to="." method="_on_recomecar_pressed"]
[connection signal="pressed" from="recomecar2" to="." method="_on_recomecar_2_pressed"]
